--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -111,7 +111,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserException.cs" />
+    <Compile Include="src\Data\Question.cs" />
+    <Compile Include="src\UserException.cs" />
     <EmbeddedResource Include="Properties\Core.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
