--- a/RedoWriteTest/RedoWriteTest.csproj
+++ b/RedoWriteTest/RedoWriteTest.csproj
@@ -95,6 +95,8 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsvUtilTest.cs" />
+    <Compile Include="DataReadTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
