--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Converter\RadioButtonConverter.cs" />
     <Compile Include="src\Data\Question.cs" />
     <Compile Include="src\UserException.cs" />
     <EmbeddedResource Include="Properties\Core.rd.xml" />
